--- a/src/components/Homepage/HowItWorks.astro
+++ b/src/components/Homepage/HowItWorks.astro
@@ -5,7 +5,7 @@ import CtaButton from "../CtaButton.astro";
 
 <section class="bg-neutral-900 px-4 sm:px-4 lg:px-6 py-12 md:py-16 text-sm md:text-base">
   <div class="max-w-6xl mx-auto">
-    <h2 id="how-it-works" class="text-3xl text-white sm:text-4xl md:text-6xl text-center mb-8">
+    <h2 id="how-it-works" class="text-3xl sm:text-4xl md:text-6xl text-center mb-8">
       How it works
     </h2>
 
@@ -32,7 +32,7 @@ import CtaButton from "../CtaButton.astro";
 
       <div class="flex flex-col md:flex-row justify-center items-center pt-4 gap-4 text-center">
         <CtaButton href="/overview" text="Read technical overview" />
-        <CtaButton href="/demo" text="Try demo" variant="secondary" />
+        <CtaButton href="/demo" text="Try demo" variant="secondaryVeraid" />
       </div>
     </div>
   </div>
