--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,3 +4,10 @@
 html {
   overflow-y: scroll;
 }
+
+@theme {
+  --text-xxs: 10px;
+}
+:not(pre) > code {
+  @apply bg-neutral-700 rounded-sm py-0.5 px-1 border border-neutral-600;
+}
