--- a/src/components/KlientoHomepage/ServerVerification.astro
+++ b/src/components/KlientoHomepage/ServerVerification.astro
@@ -6,15 +6,26 @@ import TabContainerServerVerification from "./TabContainer/TabContainerServerVer
 <section class="bg-neutral-900 py-8 lg:py-16">
   <div class="max-w-5xl mx-auto items-center justify-center text-center px-4 lg:px-6">
     <h2 class="text-3xl lg:text-6xl mb-4 lg:mb-8">Server-side verification</h2>
-    <p class="text-sm lg:text-lg mb-8">
-      Servers verify tokens by making a call to a local function provided by a Kliento SDK, or
-      offload the verification to a stateless, cloud-agnostic open source server.
+    <p class="text-sm lg:text-lg">
+      Servers verify token bundles locally, without accessing remote servers or pre-configuring
+      trusted public keys.
     </p>
 
     <TabContainerServerVerification client:load />
 
+    <p class="text-sm lg:text-lg">
+      Upon successful verification, the server obtains the <code>subjectId</code> of the client (e.g.
+      <code>staging@customer.app</code>) and any <code>claims</code> present (e.g. <code
+        >permission</code
+      >).
+    </p>
+
     <div class="mt-8">
-      <CtaButton href="/" text="Integrate Kliento in your server" variant="primaryKliento" />
+      <CtaButton
+        href="/kliento/servers"
+        text="Integrate Kliento in your server"
+        variant="primaryKliento"
+      />
     </div>
   </div>
 </section>
