Adjust max width and height of the code snippets

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -76,6 +76,10 @@ const articleClasses = [
   "[&_code>a]:hover:underline",
   "[&_a>code]:text-green-300",
   "[&_a>code]:hover:text-green-200",
+  "lg:[&_pre]:max-w-[80%]",
+  "[&_pre]:max-h-[60vh]",
+  "lg:[&_pre]:overflow-auto",
+  "[&_pre]:bg-neutral-800",
 
   "prose-strong:text-white",
   "prose-strong:font-bold",
