Add margin auto to <pre> tags  to make it center

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -79,6 +79,7 @@ const articleClasses = [
   "lg:[&_pre]:max-w-[80%]",
   "[&_pre]:max-h-[60vh]",
   "lg:[&_pre]:overflow-auto",
+  "[&_pre]:mx-auto",
   "[&_pre]:!bg-neutral-800",
   "[&_pre]:relative",
 
