--- a/src/components/KlientoHomepage/Hero.astro
+++ b/src/components/KlientoHomepage/Hero.astro
@@ -19,10 +19,10 @@ import { AnimatedSection } from "../AnimatedSection";
           class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
           >Workload authentication</span
         >
-        <br />made simple
+        <br />simplified
       </h1>
       <p class="text-center text-base md:text-xl lg:text-2xl">
-        Without secrets to protect or tokens to verify remotely
+        Without secrets to protect or public keys to distribute
       </p>
     </div>
   </div>
