--- a/src/components/KlientoHomepage/ClientIntegration.astro
+++ b/src/components/KlientoHomepage/ClientIntegration.astro
@@ -18,12 +18,12 @@ import TabContainerClientIntegration from "./TabContainer/TabContainerClientInte
     <TabContainerClientIntegration client:load />
 
     <p class="text-sm lg:text-lg max-w-4xl mx-auto">
-      Token bundles are valid for up to one hour and can be used multiple times.
+      Token bundles remain valid for up to an hour and can be used multiple times.
     </p>
 
     <p class="text-sm lg:text-lg max-w-4xl mx-auto my-6">
-      As an alternative to using your workflow identity and VeraId Authority to obtain token
-      bundles, you can generate such bundles locally with your own private keys.
+      As an alternative to using your workflow identity and VeraId Authority, you could generate
+      such bundles locally with your own private keys.
     </p>
 
     <div>
