Add break-word and overflow-wrap classes to article styles; remove overflow-x-hidden from main layout

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -55,6 +55,8 @@ const articleClasses = [
   "prose-a:no-underline",
   "prose-a:[&:hover]:text-green-200",
   "prose-a:hover:underline",
+  "break-words",
+  "overflow-wrap-anywhere",
 
   // Inline code
   "[&_:not(pre)>code]:bg-neutral-800",
