--- a/src/layouts/Skeleton.astro
+++ b/src/layouts/Skeleton.astro
@@ -67,7 +67,7 @@ const ogUrl = new URL(Astro.url.pathname, siteUrl);
   </head>
   <body>
     <PrimaryNav client:load />
-    <main class="overflow-x-hidden">
+    <main>
       <slot />
     </main>
     <Footer />
