Refactor KlientoHomepage components: streamline text classes and improve layout for Client Integration and Server Verification sections.

--- a/src/components/KlientoHomepage/ClientIntegration.astro
+++ b/src/components/KlientoHomepage/ClientIntegration.astro
@@ -5,9 +5,11 @@ import TabContainerClientIntegration from "./TabContainer/TabContainerClientInte
 ---
 
 <section class="py-8 lg:py-16">
-  <div class="max-w-5xl mx-auto items-center justify-center text-center px-4 lg:px-6">
-    <h2 class="text-3xl lg:text-6xl mb-4 lg:mb-8">Client integration</h2>
-    <p class="text-sm lg:text-lg max-w-4xl mx-auto">
+  <div
+    class="max-w-5xl mx-auto px-4 lg:px-6 [&>p]:text-sm [&>p]:lg:text-lg [&>p]:max-w-4xl [&>p]:mx-auto"
+  >
+    <h2 class="text-3xl lg:text-6xl mb-4 lg:mb-8 text-center">Client integration</h2>
+    <p>
       The easiest way to integrate Kliento is to obtain pre-configured token bundles from <a
         href="https://docs.relaycorp.tech/veraid-authority/"
         class="text-indigo-400!">VeraId Authority</a
@@ -17,16 +19,14 @@ import TabContainerClientIntegration from "./TabContainer/TabContainerClientInte
 
     <TabContainerClientIntegration client:load />
 
-    <p class="text-sm lg:text-lg max-w-4xl mx-auto">
-      Token bundles remain valid for up to an hour and can be used multiple times.
-    </p>
+    <p>Token bundles remain valid for up to an hour and can be used multiple times.</p>
 
-    <p class="text-sm lg:text-lg max-w-4xl mx-auto my-6">
+    <p class="my-6">
       As an alternative to using your workflow identity and VeraId Authority, you could generate
       such bundles locally with your own private keys.
     </p>
 
-    <div>
+    <div class="flex justify-center mt-8">
       <CtaButton
         href="/kliento/clients"
         text="Integrate Kliento in your client"
