Kliento demo: WIP

--- a/src/components/CtaBanner.astro
+++ b/src/components/CtaBanner.astro
@@ -8,8 +8,8 @@ import CtaButton from "./CtaButton.astro";
   >
     <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl">Try it yourself!</h2>
     <p class="text-sm sm:text-base md:text-lg lg:text-xl mb-8">
-      Run Kliento on your own computer. All you need is a domain name and Docker Compose!
+      Run Kliento with your own domain name on your own computer.
     </p>
-    <CtaButton href="/kliento/demo" text="Try demo locally" variant="primaryKliento" />
+    <CtaButton href="/kliento/demo" text="Try Kliento locally" variant="primaryKliento" />
   </div>
 </section>
