Update  gradient colors for headings,  and add custom link styles for Kliento pages.

--- a/src/components/KlientoHomepage/Hero.astro
+++ b/src/components/KlientoHomepage/Hero.astro
@@ -13,13 +13,12 @@ import { AnimatedSection } from "../AnimatedSection";
         class="w-full h-full object-cover opacity-80"
       />
     </div>
+
     <div class="relative px-4 sm:px-6 space-y-4 lg:space-y-8">
-      <h1 class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-center leading-tight">
-        <span
-          class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
-          >Workload authentication</span
-        >
-        <br />simplified
+      <h1
+        class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-center leading-tight bg-gradient-to-r from-[#839cff] via-[#a3b6ff] to-[#e4efff] !text-transparent bg-clip-text"
+      >
+        Workload authentication simplified
       </h1>
       <p class="text-center text-base md:text-xl lg:text-2xl">
         Without secrets to protect or public keys to distribute
