Integrate kliento-specific styles: Add kliento.css for link styling and restore link colors from global CSS.

--- a/src/layouts/KlientoPage.astro
+++ b/src/layouts/KlientoPage.astro
@@ -2,6 +2,7 @@
 import { SecondaryNav } from "../components/TopNav/SecondaryNav";
 import Page from "./Page.astro";
 import klientoLogo from "../assets/images/kliento-logo.png";
+import "../styles/kliento.css";
 ---
 
 <Page {...Astro.props} showBrandInTitle={false}>
