--- a/src/components/KlientoHomepage/Hero.astro
+++ b/src/components/KlientoHomepage/Hero.astro
@@ -4,7 +4,7 @@ import dottedPattern from "../../assets/images/dotted-pattern.svg";
 import { AnimatedSection } from "../AnimatedSection";
 ---
 
-<section class="relative py-8 sm:py-16 bg-black">
+<section class="relative py-8 sm:pt-11 sm:pb-16 bg-black">
   <div class="max-w-7xl mx-auto">
     <div class="absolute inset-0 w-full h-full">
       <Image
@@ -16,7 +16,7 @@ import { AnimatedSection } from "../AnimatedSection";
 
     <div class="relative px-4 sm:px-6 space-y-4 lg:space-y-8">
       <h1
-        class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-center leading-tight bg-gradient-to-r from-[#839cff] via-[#a3b6ff] to-[#e4efff] !text-transparent bg-clip-text"
+        class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-center leading-tight bg-gradient-to-r from-indigo-400 via-indigo-300 to-indigo-200 !text-transparent bg-clip-text"
       >
         Workload authentication simplified
       </h1>
