Tweak kliento homepage (#32)
VMKTG-32

- [x] Header title: Use a single gradient.
- [x] Text gradient: Start from lighter colour.
- [x] Service account input field: Vertically centre text.
- [x] Remove global CSS for the scrolling bar
- [x] Add link style for all kliento related markdown pages
- [x] Add font size for small viewport for the code snippets

---------

Co-authored-by: Maribel Ferreira <maribelferreira@users.noreply.github.com>

--- a/src/components/KlientoHomepage/TokenBundle.astro
+++ b/src/components/KlientoHomepage/TokenBundle.astro
@@ -15,7 +15,7 @@ import CtaButton from "../CtaButton.astro";
       <div class="text-left order-1 lg:order-2 space-y-6 text-sm lg:text-base">
         <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem]">
           Kliento credentials are <span
-            class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
+            class="bg-gradient-to-r from-indigo-400 via-indigo-300 to-indigo-200 !text-transparent bg-clip-text"
             >self-contained</span
           >
         </h2>
