--- a/src/components/KlientoHomepage/ServicesAccount.astro
+++ b/src/components/KlientoHomepage/ServicesAccount.astro
@@ -8,7 +8,7 @@ import VeraidIdentifier from "./VeraidIdentifier.astro";
       <div class="order-1">
         <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] leading-tight">
           Kliento brings <span
-            class="bg-gradient-to-r from-indigo-600 via-indigo-400 to-indigo-200 text-transparent bg-clip-text"
+            class="bg-gradient-to-r from-indigo-400 via-indigo-300 to-indigo-200 !text-transparent bg-clip-text"
             >service accounts</span
           > to the Internet
         </h2>
