--- a/src/components/KlientoHomepage/Comparison.astro
+++ b/src/components/KlientoHomepage/Comparison.astro
@@ -1,6 +1,7 @@
 ---
 import ComparisonTable from "./ComparisonTable.astro";
 import CtaButton from "../CtaButton.astro";
+import AnimatedSection from "../common/AnimatedSection";
 const features = [
   { name: "No long-lived secrets", kliento: true, apiKeys: false, jwts: true, spiffe: true },
   { name: "No public key distribution", kliento: true, apiKeys: true, jwts: false, spiffe: false },
@@ -24,17 +25,19 @@ const columnHeaders = [
 ---
 
 <section class="py-8 lg:py-16 bg-neutral-900">
-  <div class="max-w-5xl mx-auto items-center justify-center px-4 lg:px-6 space-y-6 lg:space-y-12">
-    <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] text-center">Alternatives</h2>
-    <div class="overflow-x-auto w-full">
-      <ComparisonTable features={features} columnHeaders={columnHeaders} />
+  <AnimatedSection client:visible>
+    <div class="max-w-5xl mx-auto items-center justify-center px-4 lg:px-6 space-y-6 lg:space-y-12">
+      <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-[3.5rem] text-center">Alternatives</h2>
+      <div class="overflow-x-auto w-full">
+        <ComparisonTable features={features} columnHeaders={columnHeaders} />
+      </div>
+      <div class="flex justify-center">
+        <CtaButton
+          href="/kliento/alternatives"
+          text="Compare Kliento to alternatives"
+          variant="primaryKliento"
+        />
+      </div>
     </div>
-    <div class="flex justify-center">
-      <CtaButton
-        href="/kliento/alternatives"
-        text="Compare Kliento to alternatives"
-        variant="primaryKliento"
-      />
-    </div>
-  </div>
+  </AnimatedSection>
 </section>
