--- a/src/components/KlientoHomepage/Hero.astro
+++ b/src/components/KlientoHomepage/Hero.astro
@@ -1,7 +1,7 @@
 ---
 import { Image } from "astro:assets";
 import dottedPattern from "../../assets/images/dotted-pattern.svg";
-import { AnimatedSection } from "../AnimatedSection";
+import AnimatedSection from "../common/AnimatedSection";
 ---
 
 <section class="relative py-8 sm:pt-11 sm:pb-16 bg-black">
@@ -13,16 +13,17 @@ import { AnimatedSection } from "../AnimatedSection";
         class="w-full h-full object-cover opacity-80"
       />
     </div>
-
-    <div class="relative px-4 sm:px-6 space-y-4 lg:space-y-8">
-      <h1
-        class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-center leading-tight bg-gradient-to-r from-indigo-400 via-indigo-300 to-indigo-200 !text-transparent bg-clip-text"
-      >
-        Workload authentication simplified
-      </h1>
-      <p class="text-center text-base md:text-xl lg:text-2xl">
-        Without secrets to protect or public keys to distribute
-      </p>
-    </div>
+    <AnimatedSection client:visible animationType="Scale">
+      <div class="relative px-4 sm:px-6 space-y-4 lg:space-y-8">
+        <h1
+          class="text-[2.5rem] sm:text-5xl md:text-6xl lg:text-[5.5rem] text-center leading-tight bg-gradient-to-r from-indigo-400 via-indigo-300 to-indigo-200 !text-transparent bg-clip-text"
+        >
+          Workload authentication simplified
+        </h1>
+        <p class="text-center text-base md:text-xl lg:text-2xl">
+          Without secrets to protect or public keys to distribute
+        </p>
+      </div>
+    </AnimatedSection>
   </div>
 </section>
