Kliento: Improve example ids

--- a/src/components/KlientoHomepage/VeraidIdentifier.astro
+++ b/src/components/KlientoHomepage/VeraidIdentifier.astro
@@ -1,10 +1,10 @@
 ---
 const identifiers = [
-  "wordpress@company.com",
-  "mongodb@company.com",
-  "app@customer.com",
-  "customer.com",
-  "staging@customer.app",
+  "api@prod.customer.app",
+  "wordpress@company.blog",
+  "api.customer.com",
+  "customer.app",
+  "repo@organisation.github.io",
 ];
 ---
 
